chore: move auth-rules to their own stack

--- a/kubernetes/raspberry-pi/auth/rules/rule.yml
+++ b/kubernetes/raspberry-pi/auth/rules/rule.yml
@@ -16,4 +16,4 @@ spec:
   mutators:
     - handler: header
   upstream:
-    url: http://echo-server.NAMESPACE_PLACEHOLDER
+    url: http://echo-server.default
