chore(oathkeeper): override the server config file with the local one

--- a/kubernetes/raspberry-pi/helm-releases/oathkeeper/kustomization.yml
+++ b/kubernetes/raspberry-pi/helm-releases/oathkeeper/kustomization.yml
@@ -1,2 +1,10 @@
+configurations:
+  - kustomizeconfig.yml
+
+configMapGenerator:
+  - name: oathkeeper-config-override
+    files:
+      - config.yaml=oathkeeper-server-config.yml
+
 resources:
   - release.yml
