--- a/kubernetes/raspberry-pi/helm-releases/oathkeeper/oathkeeper-server-config.yml
+++ b/kubernetes/raspberry-pi/helm-releases/oathkeeper/oathkeeper-server-config.yml
@@ -1,7 +1,7 @@
 access_rules:
   matching_strategy: regexp
-  # repositories:
-  #   - file:///etc/rules/access-rules.json
+  repositories:
+    - file:///etc/rules/access-rules.json
 authenticators:
   noop:
     enabled: true
