--- a/kubernetes/raspberry-pi/helm-releases/oathkeeper/clusterrolebinding.yml
+++ b/kubernetes/raspberry-pi/helm-releases/oathkeeper/clusterrolebinding.yml
@@ -8,4 +8,4 @@ roleRef:
   name: oathkeeper-maester-role
 subjects:
   - kind: ServiceAccount
-    name: oathkeeper-maester-account
+    name: oathkeeper-maester
