--- a/kubernetes/raspberry-pi/helm-releases/oathkeeper/oathkeeper-server-config.yml
+++ b/kubernetes/raspberry-pi/helm-releases/oathkeeper/oathkeeper-server-config.yml
@@ -205,24 +205,24 @@ log:
   format: json
   leak_sensitive_values: true
   level: info
-# tracing:
-#   service_name: oathkeeper
-#   providers:
+tracing:
+  service_name: oathkeeper
+  providers:
 #     zipkin:
 #       sampling:
 #         sampling_ratio: 0.4
 #       server_url: http://example.com
-#     otlp:
-#       insecure: false
-#       sampling:
-#         sampling_ratio: 0.4
-#       server_url: localhost:4318
+    otlp:
+      insecure: false
+      sampling:
+        sampling_ratio: 1.0
+      server_url: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp
 #     jaeger:
 #       sampling:
 #         trace_id_ratio: 0.5
 #         server_url: http://example.com
 #       local_agent_address: 127.0.0.1:6831
-#   provider: jaeger
+  provider: jaeger
 profiling: cpu
 # version: v0.0.0
 serve:
