--- a/kubernetes/raspberry-pi/monitoring/jaeger/configs.env
+++ b/kubernetes/raspberry-pi/monitoring/jaeger/configs.env
@@ -1,1 +1,7 @@
 COLLECTOR_ZIPKIN_HTTP_PORT=9411
+KAFKA_AUTHENTICATION=plaintext
+KAFKA_BROKERS=possible-jaybird-14651-eu2-kafka.upstash.io:9092
+KAFKA_PLAINTEXT_MECHANISM=SCRAM-SHA-256
+KAFKA_PROTOCOL_VERSION=SASL_SSL
+KAFKA_TOPIC=jaeger
+SPAN_STORAGE_TYPE=kafka
