--- a/kubernetes/raspberry-pi/monitoring/jaeger/deployment.yml
+++ b/kubernetes/raspberry-pi/monitoring/jaeger/deployment.yml
@@ -40,6 +40,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: jaeger
+            - secretRef:
+                name: jaeger
           resources:
             limits:
               cpu: 500m
@@ -47,3 +49,6 @@ spec:
             requests:
               cpu: 250m
               memory: 256Mi
+          volumeMounts:
+            - name: tracing
+              mountPath: /tracing
