chore(oathkeeper): move the deployment stack outside helm

--- a/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/prom-stack/release.yml
@@ -82,6 +82,8 @@ spec:
       persistence:
         enabled: true
         size: 1Gi
+      testFramework:
+        enabled: false
     kubeApiServer:
       enabled: false
     kubeDns:
