--- a/kubernetes/raspberry-pi/auth/oathkeeper/oathkeeper-server-config.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/oathkeeper-server-config.yml
@@ -208,20 +208,20 @@ log:
 tracing:
   service_name: oathkeeper
   providers:
-#     zipkin:
-#       sampling:
-#         sampling_ratio: 0.4
-#       server_url: http://example.com
-    otlp:
-      insecure: false
+    # zipkin:
+    #   sampling:
+    #     sampling_ratio: 0.4
+    #   server_url: http://example.com
+    # otlp:
+    #   insecure: false
+    #   sampling:
+    #     sampling_ratio: 1.0
+    #   server_url: example.com:443
+    jaeger:
       sampling:
-        sampling_ratio: 1.0
-      server_url: otlp-gateway-prod-eu-west-2.grafana.net:443
-#     jaeger:
-#       sampling:
-#         trace_id_ratio: 0.5
-#         server_url: http://example.com
-#       local_agent_address: 127.0.0.1:6831
+        trace_id_ratio: 1.0
+        server_url: http://jaeger:5778/sampling
+      local_agent_address: jaeger:6831
   provider: jaeger
 profiling: cpu
 # version: v0.0.0
