--- a/kubernetes/raspberry-pi/helm-releases/kratos/kratos-server-config.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kratos/kratos-server-config.yml
@@ -79,3 +79,12 @@ session:
     path: /
     same_site: None
     domain: .developer-friendly.blog
+tracing:
+  service_name: kratos
+  providers:
+    jaeger:
+      sampling:
+        trace_id_ratio: 1.0
+        server_url: http://jaeger.monitoring:5778/sampling
+      local_agent_address: jaeger.monitoring:6831
+  provider: jaeger
