--- a/kubernetes/raspberry-pi/auth/echo-server/kustomize.yml
+++ b/kubernetes/raspberry-pi/auth/echo-server/kustomize.yml
@@ -1,12 +1,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: auth-rules
+  name: echo-server-rule
   namespace: flux-system
 spec:
   force: false
   interval: 5m
-  path: ./kubernetes/raspberry-pi/auth/rules
+  path: ./kubernetes/raspberry-pi/auth/echo-server
   prune: true
   sourceRef:
     kind: GitRepository
