fix: pass promtail values as yaml file

--- a/kubernetes/raspberry-pi/auth/oathkeeper/oathkeeper-server-config.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/oathkeeper-server-config.yml
@@ -10,6 +10,8 @@ authenticators:
   cookie_session:
     config:
       check_session_url: http://kratos-public.auth/sessions/whoami
+      preserve_path: true
+      preserve_query: true
     enabled: true
   bearer_token:
     config:
