--- a/kubernetes/raspberry-pi/helm-releases/promtail/externalsecret.yml
+++ b/kubernetes/raspberry-pi/helm-releases/promtail/externalsecret.yml
@@ -19,6 +19,7 @@ spec:
       mergePolicy: Replace
       type: Opaque
       data:
-        config:
-          clients:
-            - url: https://596709:{{ .grafanaCloudToken | toString }}@logs-prod-012.grafana.net/loki/api/v1/push
+        values.yaml: |
+          config:
+            clients:
+              - url: https://596709:{{ .grafanaCloudToken | toString -}}@logs-prod-012.grafana.net/loki/api/v1/push
