fix: specify promtail helmrelease target namespace

--- a/kubernetes/raspberry-pi/helm-releases/promtail/release.yml
+++ b/kubernetes/raspberry-pi/helm-releases/promtail/release.yml
@@ -16,6 +16,7 @@ spec:
   interval: 30m
   maxHistory: 10
   releaseName: promtail
+  targetNamespace: monitoring
   test:
     enable: true
     ignoreFailures: true
