chore: actually deploy VM operator

--- a/kubernetes/raspberry-pi/helm-releases/kustomization.yml
+++ b/kubernetes/raspberry-pi/helm-releases/kustomization.yml
@@ -18,3 +18,4 @@ resources:
   - ./prom-stack/kustomize.yml
   - ./blackbox-exporter/kustomize.yml
   - ./promtail/kustomize.yml
+  - ./victoria-metrics-operator/kustomize.yml
