chore: ship all the metrics to grafana cloud using VMAgent

--- a/kubernetes/hetzner-personal/applications/listmonk/kustomize.yml
+++ b/kubernetes/hetzner-personal/applications/listmonk/kustomize.yml
@@ -4,7 +4,7 @@ metadata:
   name: listmonk
   namespace: flux-system
 spec:
-  force: true
+  force: false
   interval: 5m
   path: ./kubernetes/hetzner-personal/applications/listmonk
   prune: true
