--- a/kubernetes/raspberry-pi/monitoring/kustomization.yml
+++ b/kubernetes/raspberry-pi/monitoring/kustomization.yml
@@ -2,3 +2,4 @@ resources:
   - ./alertmanager/kustomize.yml
   - ./notifications/kustomize.yml
   - ./jaeger/kustomize.yml
+  - ./vmagent/kustomize.yml
