--- a/kubernetes/raspberry-pi/monitoring/notifications/kustomize.yml
+++ b/kubernetes/raspberry-pi/monitoring/notifications/kustomize.yml
@@ -4,7 +4,7 @@ metadata:
   name: notifications
   namespace: flux-system
 spec:
-  force: true
+  force: false
   interval: 5m
   path: ./kubernetes/raspberry-pi/monitoring/notifications
   prune: true
