chore: create servicemonitor for check-public-ip

--- a/kubernetes/raspberry-pi/applications/check-public-ip/deployment.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/deployment.yml
@@ -15,6 +15,10 @@ spec:
       containers:
         - image: ghcr.io/meysam81/check-public-ip
           name: check-public-ip
+          ports:
+            - containerPort: 8000
+              name: metrics
+              protocol: TCP
           resources:
             limits:
               memory: "128Mi"
