chore: back to smon with service labels this time

--- a/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
@@ -25,5 +25,6 @@ replacements:
           name: check-public-ip
         fieldPaths:
           - spec.selector
+          - metadata.labels
         options:
           create: true
