--- a/kubernetes/raspberry-pi/applications/check-public-ip/servicemonitor.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/servicemonitor.yml
@@ -1,5 +1,5 @@
-apiVersion: operator.victoriametrics.com/v1beta1
-kind: VMServiceScrape
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
 metadata:
   name: check-public-ip
 spec:
