fix: modify oathkeeper smon and add check-ip promrule

--- a/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
@@ -2,6 +2,7 @@ resources:
   - service.yml
   - deployment.yml
   - servicemonitor.yml
+  - promrule.yml
 
 images:
   - name: ghcr.io/meysam81/check-public-ip
