--- a/kubernetes/raspberry-pi/auth/oathkeeper/servicemonitor-oathkeeper.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/servicemonitor-oathkeeper.yml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: oathkeeper-metrics
+  name: oathkeeper
 spec:
   endpoints:
     - interval: 60s
