chore: override the check-ip script with configmap

--- a/kubernetes/raspberry-pi/applications/check-public-ip/deployment.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/deployment.yml
@@ -30,3 +30,12 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
             runAsUser: 1000
+          volumeMounts:
+            - name: check-public-ip
+              mountPath: /app
+              readOnly: true
+      volumes:
+        - name: check-public-ip
+          configMap:
+            name: check-public-ip
+            defaultMode: 0444
