--- a/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
+++ b/kubernetes/raspberry-pi/applications/check-public-ip/kustomization.yml
@@ -1,3 +1,8 @@
+configMapGenerator:
+  - name: check-public-ip
+    files:
+      - ./app/main.py
+
 resources:
   - service.yml
   - deployment.yml
