--- a/kubernetes/raspberry-pi/auth/oathkeeper/kustomization.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/kustomization.yml
@@ -12,6 +12,13 @@ images:
   - name: oryd/oathkeeper-maester
     newTag: v0.1.10-arm64
 
+commonLabels:
+  app.kubernetes.io/name: oathkeeper
+  app.kubernetes.io/managed-by: Kustomize
+  app.kubernetes.io/component: oathkeeper
+  app.kubernetes.io/part-of: auth
+  app.kubernetes.io/version: 0.40.7
+
 replacements:
   - source:
       kind: Deployment
@@ -51,7 +58,6 @@ replacements:
           name: oathkeeper-metrics
         fieldPaths:
           - spec.selector
-          - metadata.labels
         options:
           create: true
   - source:
@@ -71,20 +77,46 @@ replacements:
           name: oathkeeper-maester-metrics
         fieldPaths:
           - spec.selector
-          - metadata.labels
+        options:
+          create: true
+  - source:
+      kind: Service
+      name: oathkeeper-metrics
+      fieldPath: metadata.labels
+    targets:
+      - select:
+          kind: ServiceMonitor
+          name: oathkeeper
+        fieldPaths:
+          - spec.selector.matchLabels
+        options:
+          create: true
+  - source:
+      kind: Service
+      name: oathkeeper-maester-metrics
+      fieldPath: metadata.labels
+    targets:
+      - select:
+          kind: ServiceMonitor
+          name: oathkeeper-maester
+        fieldPaths:
+          - spec.selector.matchLabels
         options:
           create: true
 
 resources:
-  - https://github.com/ory/oathkeeper-maester//config/crd?timeout=30s&ref=v0.1.10
+  # - https://github.com/ory/oathkeeper-maester//config/crd?timeout=30s&ref=v0.1.10
   - externalsecret.yml
   - clusterrole.yml
   - clusterrolebinding.yml
   - service-oathkeeper-api.yml
   - service-oathkeeper-metrics.yml
   - service-oathkeeper-proxy.yml
+  - service-oathkeeper-maester-metrics.yml
   - serviceaccount.yml
   - deployment-oathkeeper-maester.yml
   - deployment-oathkeeper.yml
   - servicemonitor-oathkeeper.yml
   - servicemonitor-oathkeeper-maester.yml
+
+namespace: auth
