--- a/kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-maester-metrics.yml
+++ b/kubernetes/raspberry-pi/auth/oathkeeper/service-oathkeeper-maester-metrics.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: oathkeeper-maester-metrics
+  labels:
+    app.kubernetes.io/instance: oathkeeper-maester
 spec:
   ports:
   - name: http
